Updated pyproject.toml and Colab

--- a/examples/OmniParse_GoogleColab.ipynb
+++ b/examples/OmniParse_GoogleColab.ipynb
@@ -49,6 +49,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "!pip install uv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "## Clone the repository\n",
         "\n",
         "!git clone https://github.com/adithya-s-k/omniparse.git\n",
@@ -72,7 +81,7 @@
         "## Install dependencies\n",
         "## if you get a restart session warning you can ignore it\n",
         "\n",
-        "%pip install -e ."
+        "!uv -q sync"
       ]
     },
     {
@@ -81,7 +90,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%pip install transformers==4.50.3"
+        "## Matplotlib backend error might occur, so we install matplotlib-inline\n",
+        "\n",
+        "!uv add matplotlib-inline"
       ]
     },
     {
@@ -168,7 +179,6 @@
         "import threading\n",
         "import time\n",
         "import socket\n",
-        "import urllib.request\n",
         "\n",
         "def iframe_thread(port):\n",
         "  while True:\n",
@@ -185,12 +195,11 @@
         "    l = line.decode()\n",
         "    if \"trycloudflare.com \" in l:\n",
         "      print(\"This is the URL to access OmniPrase:\", l[l.find(\"http\"):], end='')\n",
-        "    #print(l, end='')\n",
         "\n",
         "\n",
         "threading.Thread(target=iframe_thread, daemon=True, args=(8000,)).start()\n",
         "\n",
-        "!python server.py --host 127.0.0.1 --port 8000 --documents --media --web"
+        "!uv run server.py --host 127.0.0.1 --port 8000 --documents --media --web"
       ]
     },
     {
@@ -238,7 +247,7 @@
         "\n",
         "threading.Thread(target=iframe_thread, daemon=True, args=(8000,)).start()\n",
         "\n",
-        "!python server.py --host 127.0.0.1 --port 8000 --documents --media --web"
+        "!uv run server.py --host 127.0.0.1 --port 8000 --documents --media --web"
       ]
     }
   ],
